解決在gcp 上遇到的問題

--- a/backend/templates/lut2/upload.html
+++ b/backend/templates/lut2/upload.html
@@ -7,8 +7,7 @@
     <title>KAGI LUTS - 上傳介面</title>
 
     <!-- Tailwind CSS -->
-    {% load static %}
-    <link href="{% static 'css/tailwind.css' %}" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
