--- a/backend/templates/lut2/gallery.html
+++ b/backend/templates/lut2/gallery.html
@@ -11,8 +11,7 @@
     <title>KAGI LUTS 投影畫面</title>
 
     <!-- Tailwind CSS -->
-    {% load static %}
-    <link href="{% static 'css/tailwind.css' %}" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
